<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Selection">

    <ScrollView
        android:id="@+id/scrollViewId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:stateListAnimator="@android:animator/fade_in"
                app:checkedChip="@id/objects"
                app:chipSpacing="10dp"
                app:chipSpacingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/objects"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="CAR"
                    android:text="@string/objects"
                    app:chipIcon="@drawable/ic_baseline_center_focus_strong_24"
                    app:chipIconEnabled="true"
                    app:closeIconVisible="false" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/texts"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="BIKE"
                    android:text="@string/text"
                    app:chipIcon="@drawable/ic_baseline_translate_24"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ppe"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="WALK"
                    android:text="@string/ppe"
                    app:chipIcon="@drawable/ic_baseline_medical_services_24"
                    app:chipIconVisible="true" />

            </com.google.android.material.chip.ChipGroup>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup">

                <ImageView
                    android:id="@+id/uploadImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/recognize"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/upload"
                    tools:srcCompat="@drawable/upload" />

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/recognize"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:width="120dp"
                android:baselineAligned="false"
                android:drawableEnd="@drawable/ic_baseline_document_scanner_24"
                android:drawableTint="@color/white"
                android:elevation="1dp"
                android:text="@string/recognize"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.941"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintVertical_bias="0.225" />

            <Button
                android:id="@+id/reset"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:width="120dp"
                android:baselineAligned="false"
                android:drawableEnd="@drawable/ic_baseline_restart_alt_24"
                android:drawableTint="@color/white"
                android:elevation="1dp"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.945"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView2"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>